[package]
name = "browser-timer-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.35.0", features=["rt-multi-thread", "time", "macros"] }
tokio-tungstenite = { version="0.21.0", features=[] }
futures-util = { version = "0.3.29", default-features = false }

log = "0.4.20"
env_logger = { version="0.10.1" }


